src/o.scss
html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small,
strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label,
legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside,
figure, footer, header, hgroup, menu, nav, section, time, mark, audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    font-weight: normal;
    vertical-align: baseline;
    background: transparent;
		line-height: 1em;
		box-sizing: border-box;
}





// general

html {
	-webkit-text-size-adjust: 100%;
}

body {
	font-family: 'Theinhardt', 'Arial', sans-serif;
	font-size: 9pt;

	text-rendering: optimizeLegibility;
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;

	padding-top: 15px;
}

#faderOverlay {
	position: fixed;
	left: 0;
	top: 0;
	z-index: 10;

	width: 100vw;
	height: 100vh;
	background: #fff;

	display: none;
}

.flex {
	display: flex;
}

.s {
	flex-grow: 1;
	-webkit-flex-grow: 1;

	width: 25%;
}

.l {
	width: 95%;
}

.row {
	margin-bottom: 5px;
}





// footer
footer {
	margin: 0 0 15px 30px;
}





// typography

h1, h2, h3, h4, h5, p {
	margin-left: 30px;
}

h1, h2, h3, h4 {
	text-transform: uppercase;
	letter-spacing: .09em;
}

h2 {
	padding: 5px 0;
}

h5 {
	text-transform: uppercase;
	margin-bottom: 5px;
}

p {
	line-height: 1.2em;
}

a {
	color: black;
	text-decoration: none;
}





// content

.page-body {
	padding-top: 5px;

	.set {
		box-sizing: border-box;
		//-webkit-transition: all 300ms linear;
		
		.set-head {
			border-top: 1px solid rgb(128, 128, 128);
			border-bottom: 1px solid rgb(128, 128, 128);;
			border-right: 1px solid rgb(128, 128, 128);
			background-color: white;
		
			min-height: 70px;
			margin-bottom: 70px;

			padding-top: 10px;

			position: -webkit-sticky;
			position: -moz-sticky;
			position: sticky;
			top: 0;

			h3 {
				margin-bottom: 10px;
			}
		}

		&:last-child {
			.set-head {
				border-right: none;
			}
		}

		hr {
			margin-bottom: 12px;
		}

		.project-head {
			font-size: 3pt;
			margin-bottom: 0;
			height: 0;
			overflow: visible;
			opacity: 0;

			position: -webkit-sticky;
			position: -moz-sticky;
			position: sticky;
			top: -2px;

			p, h5 {
				font-size: 3.1em;
				width: 15%;
			}
		}

		figure {

		}
		
		img {
			display: block;
			margin: 0 auto;

			cursor: pointer;

			margin-bottom: 120px;
		}

		.portrait, .square {
			height: 25vh;
			width: auto;
		}

		.landscape {
			height: auto;
			width: 14vw;
		}
	}
}

.overlay {
	position: absolute;
	left: 0;
	top: 0;
	background: #fff;
	width: 100vw;
	height: 100vh;
	z-index: 10;
}

.mobile-page-body, .mobile-page-header {
	display: none;
}

.caret-left, .caret-right {
	display: none;
}





// media queries

@media only screen
	and (min-width: 320px)
	and (max-width: 800px) 
	and (-webkit-min-device-pixel-ratio: 2) {
		
		body {
			font-family: sans-serif;
			font-size: 11pt;
		}

		h1, h2, h3, h4 {
			font-size: 10pt;
		}

		.mobile-page-header {
			display: block;
		}

		.mobile-page-header {

			margin-bottom: 60px;

			div {
				margin-bottom: 20px;
			}

			h4 {
				margin-bottom: 10px;
			}
		}

		.page-header {
			display: none;
		}
		
		.page-body {
			.set .portrait {
				height: auto;
			}
		}

		.infoButton {
			position: absolute;
			top: 12px;
			right: 25px;
		}

		.info {
			display: none;
		}

		.page-body {
			.set {
				.landscape, .portrait {
					display: block;
					margin: 0 auto 70px auto;
		
					cursor: pointer;
		
					width: 80%;
				}
			}
		}

		.set-head {
			display: flex;

			border-top: 1px solid rgb(128, 128, 128);
			border-bottom: 1px solid rgb(128, 128, 128);;
			border-right: 1px solid rgb(128, 128, 128);
			background-color: white;
		
			min-height: 60px;
			margin-bottom: 70px;

			padding-top: 23px;

			position: -webkit-sticky;
			//position: sticky;
			top: 0px;

			
			.caret-left, .caret-right {
				display: block;
				flex-grow: 1;
				font-size: .7em;

				cursor: pointer;
			}
			
			.caret-left {
				margin-left: 30px;
			}

			h3 {
				margin: 0;
				flex-grow: 5;
			}
		}
}

